k8s/gatekeeper/kustomize/gatekeeper/overlays/local/gatekeeper/add-ca.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: gatekeeper-ca-cert
      containers:
        - name: gatekeeper
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/gatekeeper/tls
